syntax = "proto3";
package thesixnetwork.sixprotocol.nftmngr;

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types";

message OpenseaDisplayOption {

  string display_type = 1;
  string trait_type = 2;
  uint64 max_value = 3;
}
